# cleanrobot

./: .gitattributes  .gitignore  GITHUB_CLI_GUIDE.md  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_UPLOAD.md  README.md  SUMMARY.md  UPLOAD_TO_GITHUB.sh  build.sh  create_and_push_github.sh  frames_2025-12-15_18.02.10.gv  frames_2025-12-20_23.44.35.gv  install_dependencies.sh  install_github_cli.sh  start_all.sh  start_robot.sh
config/: ekf.yaml  ld14_slam.yaml  rf2o.yaml
docs/: imu_pipeline.md  mapping_stack.md  startup.md  web_api.md
src/cleaner_robot_bringup/: CMakeLists.txt  package.xml
src/cleaner_robot_bringup/launch/: cleaner_robot.launch.py
src/cleanrobot_bringup/: package.xml  setup.cfg  setup.py
src/cleanrobot_bringup/config/: ekf.yaml  rf2o.yaml  slam.yaml
src/cleanrobot_bringup/launch/: bringup_mapping.launch.py  mapping.launch.py  odom.launch.py
src/cleanrobot_bringup/rviz/: bringup.rviz
src/cleanrobot_nav/: CMakeLists.txt  package.xml
src/cleanrobot_nav/config/: fake_robot.urdf  nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml
src/cleanrobot_nav/launch/: bringup.launch.py
src/cleanrobot_nav/maps/: cleanrobot_map.pgm  cleanrobot_map.yaml
src/cleanrobot_nav/rviz/: bringup_fake.rviz
src/cleanrobot_nav/scripts/: coverage_waypoints.py  fake_base.py
src/cleanrobot_slam/: CMakeLists.txt  package.xml
src/cleanrobot_slam/config/: slam_params.yaml
src/cleanrobot_slam/launch/: ld14_slam.launch.py
src/imu_ros2_device/: setup.cfg
src/imu_ros2_device/config/: imu_filter_param.yaml
src/imu_ros2_device/imu_ros2_device/: ybimu_driver.py
src/imu_ros2_device/launch/: imu_only.launch.py  ybimu_display.launch.py
src/imu_ros2_device/rviz/: ybimu.rviz
src/ldlidar/: CMakeLists.txt
src/ldlidar/include/: lipkg.h
src/ldlidar/launch/: ld14p.launch.py
src/ldlidar/scripts/: LD14P_scan_fre.py
src/ldlidar/src/: main.cpp
src/lidar_driver/: README.md  package.xml  setup.cfg  setup.py
src/lidar_driver/config/: lidar_driver.yaml
src/lidar_driver/launch/: lidar_driver.launch.py
src/lidar_driver/lidar_driver/: lidar_driver_node.py
src/perception_fusion/: CMakeLists.txt  README.md  package.xml
src/perception_fusion/config/: perception_fusion.yaml
src/perception_fusion/launch/: perception_fusion.launch.py
src/perception_fusion/msg/: CleanTask.msg  CleaningTaskList.msg
src/perception_fusion/scripts/: perception_fusion_node.py
src/robot_web_bridge/: package.xml  setup.cfg  setup.py
src/robot_web_bridge/launch/: web_bridge.launch.py
src/robot_web_bridge/resource/: robot_web_bridge
src/robot_web_bridge/robot_web_bridge/: __init__.py  web_bridge_node.py
src/stm32_interface/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/stm32_interface/config/: stm32_interface.yaml
src/stm32_interface/launch/: stm32_bridge.launch.py  stm32_interface.launch.py
src/stm32_interface/resource/: stm32_interface
src/stm32_interface/scripts/: stm32_interface_node.py
src/stm32_interface/stm32_interface/: __init__.py  cmd_vel_to_stm32.py
src/vision_detection/: README.md  package.xml  setup.cfg  setup.py
src/vision_detection/config/: vision_detection.yaml
src/vision_detection/launch/: vision_detection.launch.py
src/vision_detection/models/: .gitkeep
src/vision_detection/vision_detection/: vision_detection_node.py
