<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cleaner_robot_bringup</name>
  <version>0.1.0</version>
  <description>扫地机器人统一启动包</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>MIT</license>

  <exec_depend>lidar_driver</exec_depend>
  <exec_depend>vision_detection</exec_depend>
  <exec_depend>perception_fusion</exec_depend>
  <exec_depend>stm32_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

