<?xml version="1.0"?>
<package format="3">
  <name>cleanrobot_slam</name>
  <version>0.0.1</version>
  <description>SLAM integration package using slam_toolbox with LD14 LiDAR.</description>
  <maintainer email="maintainer@example.com">Cleaner Robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>slam_toolbox</build_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>lidar_driver</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
