<?xml version="1.0"?>
<package format="3">
  <name>robot_web_bridge</name>
  <version>0.0.1</version>
  <description>Expose robot ROS2 data via HTTP and WebSocket using FastAPI.</description>
  <maintainer email="robot@example.com">Robot Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
